# g4_test_ai_agent_frameworks

./: .env.example  .gitignore  README.md  langchain_openai.py  requirements.txt  setup.ps1  setup.sh  tenacity.py
_stubs/: openai.py
_stubs/langchain_core/: __init__.py
_stubs/langgraph/: graph.py
common/: pyproject.toml  setup.py
common/common/: __init__.py  benchmark_metrics.py  config.py  context_engineering.py  guardrails.py  research_prompts.py
common/common/mongodb/: __init__.py  research_data.py
crewai_pipeline/: pyproject.toml
crewai_pipeline/test_crewai/: __init__.py  config.py  main.py  research_agent.py
docs/: CASO_DE_USO.md  COMO_RODAR.md
experiments/: benchmark_pipelines.py
langchain_core/: messages.py
langchain_pipeline/: pyproject.toml
langchain_pipeline/test_langchain/: __init__.py  config.py  main.py  research_agent.py
langgraph/: __init__.py
langgraph_pipeline/: pyproject.toml
langgraph_pipeline/test_langgraph/: __init__.py  config.py  main.py  research_agent.py
scripts/: debug_retry.py
tests/: test_durable_and_delegation.py  test_guardrails_context.py  test_langchain_pipeline.py  test_sprint2_pipelines.py  test_vanilla_pipeline.py
vanilla/: pyproject.toml
vanilla/test_vanilla/: __init__.py  config.py  main.py  research_agent.py
