[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "test_langchain"
version = "0.1.0"
description = "Protótipo LangChain (LCEL) — Agente de Pesquisa e Relatório"
requires-python = ">=3.10"
dependencies = [
    "common",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
start_langchain = "test_langchain.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["test_langchain*"]
